--- a/paper/thesis.tex
+++ b/paper/thesis.tex
@@ -10,6 +10,8 @@
 
 % Macro's
 \newcommand{\CI}{Continuous Integration}
+\newcommand{\github}{GitHub}
+\newcommand{\githubactions}{GitHub Actions}
 \newcommand{\junit}{JUnit}
 \newcommand{\travisci}{Travis CI}
 \newcommand{\tsm}{Test Suite Minimisation}
