--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -1,56 +1,42 @@
-\chapter{Conclusion and future work}
+% !TeX root = thesis.tex
 
-(TODO)
-- TCP combieren met ideeen uit TSM om zo bepaalde tests te skippen -> Test Suite Optimisation
+\chapter{Conclusion}
 
-- Onderscheid tussen unit en integration tests -> gefaalde unit test geeft waarschijnlijk aanleiding tot gefaalde integratie test dus gebruik dit om te ordenen
+The main purpose of this thesis has been to investigate different approaches towards optimising the test suite of a common software project. The concepts of \tsm{}, \tcs{} and \tcp{} have been introduced and accompanying algorithms have been presented. A novel client-server oriented framework for the latter approach has been proposed, as well as a new prioritisation algorithm. Finally, \velocity{} has been applied to the UGent Dodona project, proving its ability to predict test case failure and therefore reduce the execution time of the test suite.\\
 
-- Parallelliseren?
+\noindent A second purpose of this thesis was to gain useful insights into the behaviour of a typical test suite. These insights have been formulated as three additional research questions, to which answers have been provided in the previous chapter.
 
-- Machine Learning en Lineair programmeren als metapredictor?
+\section{Future work}
+The proposed \velocity{} implementation in this thesis is currently able to prioritise a Gradle Java project using 10 available predictors and a meta predictor. While this is certainly functional, it is far from complete and multiple improvements can be added.
 
-- Hou rekening met wat er gebeurt als tests zelf worden aangepast -> beschouw dit ook als een change in de gecoverde code
+\subsection{Java Agent}
+The existing Java Agent can be extended in multiple ways. The most prominent addition would be to allow test cases to be executed in parallel. At the moment of writing, this is not possible yet. In order to facilitate parallel testing, one must first decide how to schedule the prioritised test cases across multiple threads, since the execution time of a test case varies strongly. One possibility to perform this scheduling is to use the average execution time per test case, which is obtained from prior runs. Alternatively, this can be performed at runtime by using any existing inter-thread communication paradigm such as message passing. On the implementation side of parallelisation, the current \texttt{TestProcessor} should be adapted to inherit from the \texttt{MaxNParallelTestClassProcessor}. A thread pool should ideally be used to reduce the overhead of restarting a new thread for every test case.
 
-- Niet zeker wat er gebeurt met additions (ipv modifications/deletions) aan source code lines.
+\subsection{Predictions}
+Further research and improvements to the predictors can be made on four different aspects.\\
 
-- Idee: Combineer meerdere predictions ipv ze apart te gebruiken?
+\noindent The first enhancement is that currently the predictor does not discriminate between a unit test or an integration test. 
+Recall that the scope of a unit test is limited to a small fraction of the application and that its execution time is ideally rather low. An integration test however usually takes longer to execute and tests multiple components of the application at once. The predictor could make use of this distinction and assume that a failure in a unit test has a high probability of resulting in a failed integration test as well, hence prioritising unit tests over integration tests.\\
 
-- Gebruik een saturerende counter ipv te blijven increasen/decreasen, voor het geval de codebase zich aanpast in de toekomst
+\noindent Secondly, the prediction algorithms currently take into account which source code lines have either been modified or removed in order to prioritise affected test cases. Likewise, test cases of which the code has been modified should also be considered as candidates for prioritisation, as the changed test case might contain a bug as well.\\
 
-%(TODO)
+\noindent A third and unexplored research opportunity is to investigate the joint performance of multiple prediction algorithms combined. This could be integrated with the existing meta predictor. Instead of assigning a score to the entire prediction, multiple predictions could be intermingled using predefined weights.\\
 
-%- Implementatiedetails van algoritmes
+\noindent The final improvement is to take into account branch coverage in addition to the statement coverage which is currently used. This is a rather complex feature as not every coverage framework is capable of reporting accurately which branches have been covered and which ones have not. A suggested implementation would be to instrument the source code and rewrite every condition of every branch as separate \texttt{if}-statements.
 
-%- Uitwerking: nog onder voorbehoud (2e semester)
+\subsection{Meta predictor}
+The proposed meta predictor increases the score of every predictor which predicted an above-average ranking and decreases the score of the other predictors. However, a possible problem with this approach is that the nature of the source code might evolve and change as time progresses. Using the current updating strategy it will take several test suite invocations for an alternative predictor to be preferred by the meta predictor. If a saturating counter would be used instead (\autoref{fig:saturating-counter}), this would be resolved much more quickly, allowing a more versatile meta predictor.
 
-%- Metapredictor: Voer alle algoritmes eens uit en rangschik ze volgens hoe goed ze het voorspeld hebben
+\begin{figure}[htbp!]
+	\centering
+	\includegraphics[width=\textwidth]{assets/images/saturating-counter.pdf}
+	\caption{Saturating counter}
+	\label{fig:saturating-counter}
+\end{figure}
 
-%- Scoringsmechanisme: Nog bepalen
+In addition to implementing a different update strategy, it might be worth to investigate the use of machine learning or linear programming models as a meta predictor, or even as a prediction algorithm.
 
-%- Junit: https://www.baeldung.com/junit-5-test-order
+\subsection{Final enhancements}
+Finally, since some of the implemented algorithms are inherently \tsm{} algorithms rather than prioritisation algorithms, the framework might opt to not execute some test cases at all, whereas now the entire test suite is always executed.\\
 
-%\subsection{Architectuur}
-%- Commit
-%- POST /commit
-%data: parent commit hash, huidige commit hash
-%result: volgorde van tests
-%- voer tests uit in gegeven volgorde
-%- POST /result
-%data: huidige commit hash, gefaalde tests
-
-%\subsection{Junit-reorder}
-%- Orde vastleggen in yaml files (plaats voorbeeld)
-%- Out of the box support om tests binnen eenzelfde klasse in volgorde uit te voeren, maar niet class-wide support
-%- Na elke uitvoering van een test wordt een nieuwe processor aangemaakt met een filter op de methodnaam, dit heeft als nadeel dat hergebruiken van initialisaties niet gaat. Misschien hier nog iets op vinden
-%- Parallelliseren momenteel niet gesupport, geen idee hoe dat zou werken met een volgorde (kan niet gewoon verdelen in volgorde want stel dat 1 test heel lang duurt dan is die volgorde niet meer juist)
-%- Shortcuts genomen wegens problemen met gradle (shaded jars) -> bepaalde JUnit functionaliteit weggegooid (vooral @Ignored annotatie)
-
-%Na elke uitvoering van test wordt coverage data bijgehouden om later te analyseren door test processor hack (maak hier zo'n mooi ding van).
-
-%Coverage data formaat optimaliseren zodat xmlfile niet gigantisch groot wordt -> done
-
-%Algoritmes aanpassen zodat branches ook rekening mee gehouden wordt (stel dat test A lijn 5 covert en test B ook, maar lijn 5 is een if-statement met 2 condities en test A triggert enkel de eerste conditie, dan zal test B met lagere prioriteit worden uitgevoerd of zelfs niet omdat de lijn al gecoverd is) -> eventueel via mutator die branches naar lijnen uitsplitst in zowel tests als source
-
-%Andere programmeertalen kunnen op zelfde manier door tests sequentieel uit te voeren
-
-%<https://rubygems.org/gems/reverse_coverage/
+\noindent Support for other programming languages and frameworks is possible by implementing new agents. The basic implementation is straightforward to restart the test suite after every executed test case, should test case reordering not be supported natively by the test framework.
