--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -1,6 +1,6 @@
 % !TeX root = thesis.tex
 
-\chapter{Conclusion}
+\chapter{Conclusion}\label{chap:conclusion}
 
 The main purpose of this thesis has been to investigate different approaches towards optimising the test suite of a common software project. The concepts of \tsm{}, \tcs{} and \tcp{} have been introduced and accompanying algorithms have been presented. A novel client-server oriented framework for the latter approach has been proposed, as well as a new prioritisation algorithm. Finally, \velocity{} has been applied to the UGent Dodona project, proving its ability to predict test case failure and therefore reduce the execution time of the test suite.\\
 
