--- a/paper/evaluation/research-questions.tex
+++ b/paper/evaluation/research-questions.tex
@@ -12,5 +12,8 @@ The ROCKET algorithm (\autoref{ssec:alg-rocket}) relies on the assumption that i
 \paragraph*{RQ3: What is the average duration of a test run?}
 Measuring how long it takes to execute a typical test run is required to estimate the benefit of applying any form of test suite optimisation. Only successful test runs should be considered to reduce bias introduced by prematurely aborting execution.
 
-\paragraph*{RQ4: What is the performance impact of applying \tcp{} to Dodona?}
+\paragraph*{RQ4: What is the performance of applying \tcp{} to Dodona?}
 This research question will investigate how quickly a failing test case in the Dodona project can be discovered using \velocity{}.
+
+\paragraph*{RQ5: What is the performance of applying \tcp{} to Stratego?}
+This research question will investigate how quickly a failing test case in the Stratego project can be discovered using \velocity{}.
