Add basic structure for final version

--- a/.latex-common/preamble.tex
+++ b/.latex-common/preamble.tex
@@ -13,6 +13,7 @@
 \usepackage{caption}
 \usepackage{changepage}
 \usepackage{enumitem}
+\usepackage[acronym]{glossaries}
 \usepackage{hyperref}
 \usepackage{listing}
 \usepackage{listings,lstautogobble}
@@ -24,6 +25,7 @@
 \usepackage{tabularx}
 \usepackage{titlesec}
 \usepackage{xcolor}
+\usepackage{cleveref}
 
 % Mathematical definitions.
 \theoremstyle{break}
