--- a/paper/references.bib
+++ b/paper/references.bib
@@ -297,7 +297,9 @@
 }
 
 @article{cusumanomicrosoft,
-	author = {Cusumano, and Michael, Akindutire and Smith, Stanley},
+	author = {Cusumano, Michael
+	and Michael, Akindutire
+	and Smith, Stanley},
 	year = {1995},
 	month = {02},
 	pages = {},
