Fix references in introduction

--- a/paper/thesis.tex
+++ b/paper/thesis.tex
@@ -8,6 +8,7 @@
 \usepackage{fancyhdr}
 \usepackage[a4paper,plainpages=false]{hyperref}
 \usepackage[automake]{glossaries}
+\usepackage{cleveref}
 \usepackage{listings}
 \usepackage[default,scale=0.95]{opensans}
 \usepackage[nottoc]{tocbibind}
