--- a/paper/evaluation.tex
+++ b/paper/evaluation.tex
@@ -4,7 +4,7 @@
 \label{ch:evaluation}
 This chapter will evaluate the performance of the previously discussed \velocity{} framework. In the first section, the two projects that will be used in the subsequent experiments will be presented. The next section will formally restate the research questions that have been posed in the introduction and extend these. Afterwards, the procedure of how the data was obtained will be elaborated. The final section will provide answers to the research questions as well as present the results of applying \tcp{} to the test subjects.
 
-\input{evaluation/test-subjects.tex}
-\input{evaluation/research-questions.tex}
-\input{evaluation/data-collection.tex}
-\input{evaluation/results.tex}
+%\input{evaluation/test-subjects.tex}
+%\input{evaluation/research-questions.tex}
+%\input{evaluation/data-collection.tex}
+%\input{evaluation/results.tex}
