--- a/paper/software-engineering.tex
+++ b/paper/software-engineering.tex
@@ -2,3 +2,8 @@
 
 \chapter{Software Engineering}
 \label{ch:software-engineering}
+The Institute of Electrical and Electronics Engineers \texttt{[IEEE]} defines the practice of Software Engineering as: "Application of a systematic, disciplined, quantifiable approach to the development, operation and maintenance of software; that is, the application of engineering to software" \cite[p.~421]{8016712}. The word ``systematic'' in this definition, emphasises the need for a structured process, depicting guidelines and models that describe how software should be developed the most efficient way possible. Such a process does exist and it is often referred to as the Software Development Life Cycle (SDLC) \cite[p.~420]{8016712}. In the absence of a model, i.e. when the developer does what they deem correct without following any rules, the term \emph{Cowboy coding} is used \cite[p.~34]{landry2011iterative}.
+
+\input{software-engineering/sdlc.tex}
+\newpage
+\input{software-engineering/agile-software-development.tex}
