--- a/paper/velocity.tex
+++ b/paper/velocity.tex
@@ -2,3 +2,9 @@
 
 \chapter{Proposed framework: \velocity{}}
 \label{ch:velocity}
+The implementation part of this thesis consists of a framework and a set of tools, tailored at optimising the test suite as well as providing accompanying metrics and insights. The framework was named \emph{\velocity{}} to reflect its purpose of enhancing the speed at which \CI{} is practised. This paper will now proceed by describing the design goals of the framework. Afterwards, a high-level schematic overview of the implemented architecture will be provided, followed by a more in-depth explanation of every pipeline step. In the final section of this chapter, the \emph{Alpha} algorithm will be presented.
+
+\input{velocity/design-goals.tex}
+\input{velocity/high-level-overview.tex}
+\input{velocity/pipeline.tex}
+\input{velocity/alpha.tex}
